--- a/about.html
+++ b/about.html
@@ -15,5 +15,10 @@
   <h3>Kaegan</h3>
   
   <h3>Harper</h3>
+  <img src="https://en.wikipedia.org/wiki/Harp#/media/File:Harp.png" style="width:200px;height:200px">
+    <p>
+      I am currently a senior majoring in Geographic Information System and a minor in Business Administration.
+      My favorite colors are yellow, blue and grey. I am looking to pursue a career in subway transportation.
+    </p>
   
   </body>
