--- a/about.html
+++ b/about.html
@@ -12,13 +12,11 @@
     I'm currently an intern at a gas pipeline company and looking to pursue a career in the energy industry.
   </p>
   
-  <h3>Kaegan</h3>
+  <h3>Keagan</h3>
+    <p>
+      
+    </p>
   
   <h3>Harper</h3>
-  <img src="https://en.wikipedia.org/wiki/Harp#/media/File:Harp.png" style="width:200px;height:200px">
-    <p>
-      I am currently a senior majoring in Geographic Information System and a minor in Business Administration.
-      My favorite colors are yellow, blue and grey. I am looking to pursue a career in subway transportation.
-    </p>
   
   </body>
