--- a/about.html
+++ b/about.html
@@ -18,5 +18,10 @@
     </p>
   
   <h3>Harper</h3>
+    <img src="https://en.wikipedia.org/wiki/Harp#/media/File:Harp.png" style="width:200px;height:200px">
+    <p>
+      I am a senior majoring in Geographic Information Systems and minoring in Business Administration. My favorite colors are
+      yellow, blue, and grey. I am looking to pursue a career in subway transportation.
+    </p>
   
   </body>
