--- a/about.html
+++ b/about.html
@@ -13,8 +13,11 @@
   </p>
   
   <h3>Keagan</h3>
+    <img src = "keagan.jpg" style = "width: 200" height "300"
     <p>
-      
+      My name is Keagan McNew, I am a second year Masters student at Texas State University. I received 
+      my undergraduate degree at Texas State University, where I majored in physical geography and minored in 
+      geology; I also received a GIS certificate.   
     </p>
   
   <h3>Harper</h3>
